--- a/week13-project3/package.json
+++ b/week13-project3/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "engines": {
-    "node": ">= 0.10.0"
+    "node": "^8.9.1"
   },
   "scripts": {
     "start": "node app.js"
