--- a/week13-project3/package.json
+++ b/week13-project3/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.5.2",
     "ejs": "*",
     "express": "4.x",
+    "nodemon": "^1.12.5",
     "request": "^2.47.0",
     "serve-favicon": "^2.2.0",
     "socket.io": "^1.2.1",
